tests/algorithms/x/Erlang/graphs/graph_adjacency_matrix.error
run: exit status 127
escript: exception error: "missing vertex"
  in function  main:add_edge/3 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/graph_adjacency_matrix.erl, line 221)
  in call from main:'-make_graph/3-Fun_2_loop/6-1-'/6 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/graph_adjacency_matrix.erl, line 69)
  in call from main:make_graph/3 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/graph_adjacency_matrix.erl, line 75)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/graph_adjacency_matrix.erl, line 278)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1